<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard_icon"
            android:title="@string/menu_dashboard" />

        <item
            android:id="@+id/nav_input_data"
            android:icon="@drawable/ic_input_data_icons"
            android:title="@string/menu_input_data" />
        <item
            android:id="@+id/nav_expense_records"
            android:icon="@drawable/ic_expense_records_icon"
            android:title="@string/menu_expense_records" />

        <item
            android:id="@+id/nav_income_records"
            android:icon="@drawable/ic_income_records_icon"
            android:title="@string/menu_income_records" />

        <item
            android:id="@+id/nav_car_number_records"
            android:icon="@drawable/ic_car_number_records_icon"
            android:title="@string/menu_car_number_record" />

        <item
            android:id="@+id/nav_input_expense"
            android:icon="@drawable/ic_input_expense_icons"
            android:title="@string/menu_input_expense" />

        <item
            android:id="@+id/nav_shop_info"
            android:icon="@drawable/ic_shop_info_icon"
            android:title="@string/menu_shop_info" />

        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_sign_out"
            android:title="@string/sign_out" />




    </group>
</menu>