<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServiceEdit">

    <TextView
        android:id="@+id/textforSignIn"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="75dp"
        android:gravity="center_horizontal"
        android:text="@string/service_type"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:fontFamily="@font/segoeui"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/edtextForPrice"
        android:layout_width="335dp"
        android:layout_height="33dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_line"
        android:gravity="center_horizontal"
        android:hint="@string/enter_price_for_edit"
        android:textAlignment="center"
        android:textSize="15sp"
        app:fontFamily="@font/segoeui"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textforSignIn23" />

    <TextView
        android:id="@+id/textforSignIn23"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/service_price"
        app:fontFamily="@font/segoeui"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtextServiceForEdit"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/edtextServiceForEdit"
        android:layout_width="335dp"
        android:layout_height="33dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/border_line"
        android:gravity="center_horizontal"
        android:hint="@string/enter_service_for_edit"
        app:fontFamily="@font/segoeui"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textforSignIn" />

    <Button
        android:id="@+id/btmDelete"
        android:layout_width="140dp"
        android:layout_height="43dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rectangle_red_btm"
        android:ellipsize="none"
        android:text="@string/delete"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="normal"
        app:fontFamily="@font/segoeui"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btmEdit"
        android:layout_width="140dp"
        android:layout_height="43dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rectangle_buttom"
        android:ellipsize="none"
        android:text="@string/edit"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="normal"
        app:fontFamily="@font/segoeui"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
