<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/line8"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="350dp"
        android:layout_height="0.5dp"
        android:layout_marginStart="30dp"
        android:background="#707070"
        android:gravity="center_horizontal"
        android:paddingTop="5dip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textforSignIn9" />

    <TextView
        android:id="@+id/textforSignIn9"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/shop_creation"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textforSignIn10"
        android:layout_width="189dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/shop_name"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:fontFamily="@font/segoeui"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textforSignIn9"
        tools:ignore="RtlCompat" />


    <EditText
        android:id="@+id/edtextTax"
        android:layout_width="140dp"
        android:layout_height="33dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border_line"
        android:gravity="center_horizontal"
        android:hint="@string/tax"
        app:fontFamily="@font/segoeui"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/checkboxTax"
        app:layout_constraintTop_toBottomOf="@+id/edtextSlogan" />

    <Button
        android:id="@+id/btmSetUp"
        android:layout_width="251dp"
        android:layout_height="43dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rounded_buttom"
        android:ellipsize="none"
        android:text="@string/set_up"
        app:fontFamily="@font/segoeui"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtextSlogan"
        android:layout_width="335dp"
        android:layout_height="33dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/border_line"
        android:gravity="center_horizontal"
        android:hint="@string/enter_shop_slogan"
        app:fontFamily="@font/segoeui"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textforSignIn14" />

    <TextView
        android:id="@+id/textforSignIn14"
        android:layout_width="189dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/shop_slogan"
        app:fontFamily="@font/segoeui"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtextAddress"
        tools:ignore="RtlCompat" />



    <TextView
        android:id="@+id/textforSignIn12"
        android:layout_width="189dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/shop_address"
        app:fontFamily="@font/segoeui"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtextPhoneNumber"
        tools:ignore="RtlCompat" />

    <Spinner
        android:id="@+id/spinnerCity"
        android:layout_width="140dp"
        android:layout_height="33dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/droup_down"
        android:drawablePadding="5dp"
        android:tooltipText="@string/car_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textforSignIn12" />

    <EditText
        android:id="@+id/edtextShopName"
        android:layout_width="335dp"
        android:layout_height="33dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/border_line"
        android:gravity="center_horizontal"
        android:hint="@string/enter_shop_name"
        app:fontFamily="@font/segoeui"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textforSignIn10" />

    <EditText
        android:id="@+id/edtextPhoneNumber"
        android:layout_width="335dp"
        android:layout_height="33dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/border_line"
        android:gravity="center_horizontal"
        android:hint="@string/enter_phone_number"
        app:fontFamily="@font/segoeui"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textforSignIn11" />

    <EditText
        android:id="@+id/edtextAddress"
        android:layout_width="335dp"
        android:layout_height="33dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/border_line"
        android:gravity="center_horizontal"
        android:hint="@string/enter_shop_address"
        app:fontFamily="@font/segoeui"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCity" />

    <Spinner
        android:id="@+id/spinnerTownShip"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/droup_down"
        app:layout_constraintStart_toEndOf="@+id/spinnerCity"
        app:layout_constraintTop_toBottomOf="@+id/textforSignIn12" />

    <TextView
        android:id="@+id/textforSignIn11"
        android:layout_width="189dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/phone_number"
        app:fontFamily="@font/segoeui"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtextShopName"
        tools:ignore="RtlCompat" />

    <CheckBox
        android:id="@+id/checkboxTax"
        android:layout_width="140dp"
        android:layout_height="33dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/tax"
        app:fontFamily="@font/segoeui"
        android:checked="true"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtextSlogan"
        tools:ignore="RtlCompat" />

</androidx.constraintlayout.widget.ConstraintLayout>