<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/line8"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="350dp"
        android:layout_height="0.5dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="40dp"
        android:background="#707070"
        android:gravity="center_horizontal"
        android:paddingTop="5dip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textforheader" />

    <TextView
        android:id="@+id/textforheader"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/other_item_creation"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btmCreate"
        android:layout_width="251dp"
        android:layout_height="43dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rounded_buttom"
        android:ellipsize="none"
        android:text="@string/create"
        app:fontFamily="@font/segoeui"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textforSignIn22"
        android:layout_width="189dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="75dp"
        android:gravity="center_horizontal"
        android:text="@string/item"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:fontFamily="@font/segoeui"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/edtextItem"
        android:layout_width="335dp"
        android:layout_height="33dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/border_line"
        android:gravity="center_horizontal"
        android:hint="@string/enter_item_type"
        app:fontFamily="@font/segoeui"
        android:textAlignment="textStart"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textforSignIn22" />

    <EditText
        android:id="@+id/edtextPrice"
        android:layout_width="335dp"
        android:layout_height="33dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/border_line"
        android:gravity="center_horizontal"
        android:hint="@string/enter_item_price"
        app:fontFamily="@font/segoeui"
        android:textAlignment="textStart"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textforSignIn23" />

    <TextView
        android:id="@+id/textforSignIn23"
        android:layout_width="189dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/price"
        app:fontFamily="@font/segoeui"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtextItem"
        tools:ignore="RtlCompat" />

</androidx.constraintlayout.widget.ConstraintLayout>